fix horizontal scrollbar, add acorn as svg include not img

--- a/public/css/_view_landing.scss
+++ b/public/css/_view_landing.scss
@@ -44,15 +44,16 @@
 
 .heading-1--landing-raise {
 	position: relative;
-}
 
-.heading-graphic-acorn {
-	vertical-align: top;
-	margin: 0 $spacing-2 0 0;
+	.icon-acorn {
+		width: 32px;		
+		vertical-align: top;
+		margin: 0 $spacing-2 0 0;
 
-	@media (min-width: $screen-lg-min) {
-		position: absolute;
-		left: -50px;
+		@media (min-width: $screen-lg-min) {
+			position: absolute;
+			left: -50px;
+		}
 	}
 }
 
